# manager-cloud-installer

./: .eslintignore  .eslintrc.js  .gitignore  .travis.yml  LICENSE  README.md  apache_config.txt  build_dist.sh  build_run_dist.sh  build_ui.sh  build_ui_dist.sh  config.json  index.html  index.js  index.production  package-lock.json  package.json  protractor.conf.js  run_dist.sh  server.js  webpack.config.js
ansible/: dayzero-os-provision.yml
api/: api.json
lib/fonts/: fontawesome-webfont.eot
public/: bundle.js  index.css  index.html
server/: .gitignore  README.rst  main.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
server/config/: config.py  defaults.cfg
server/manager_cloud_installer_svr/: .gitignore  __init__.py  ardana.py  oneview.py  server.py  socket_proxy.py  suse_manager.py  ui.py  util.py
src/: App.css  App.js  Deployer.css  Deployer.js  Deployer.test.js  InstallWizard.js
src/components/: BaseServerDetails.js  Buttons.js  CollapsibleTable.js  ConnectionCredsInfo.js  ContextMenu.js  Dropdown.js  EditCloudSettings.js  EditServerDetails.js  HelpText.js  InlineAddRemoveFields.js  InputValidators.js  LoadingMask.js  LogViewer.js  Messages.js  Modals.js  ModelServerDetails.js  OvServerDetails.js  PlaybookProcess.js  ServerDragDropTable.js  ServerDragRowItemsTemplate.js  ServerRowItem.js  ServerRowItemsDragLayer.js  ServerTable.js  ServerUtils.js  SmServerDetails.js  StepProgressValues.js  StepStateValues.js  TransferTable.js  ViewServerDetails.js  WizardDefaults.js  (+1 more)
tools/: .inspecrc  inspector.py  websoctest.py
(+78 files in other folders)
