[metadata]
name = manager-cloud-installer-svr
summary = SUSE OpenStack Cloud Installer Server
description-file = 
	README.rst
author = SUSE
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.5

[global]
setup-hooks = 
	pbr.hooks.setup_hook

test_suite = manager_cloud_installer_svr.tests
